Fix overflowing section title input on mobile

--- a/app/assets/stylesheets/workspace/section_editor.scss
+++ b/app/assets/stylesheets/workspace/section_editor.scss
@@ -9,7 +9,6 @@
 
 .section-title-input {
   border: none;
-  height: 100%;
   outline: none;
   width: 550px;
 
